--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "## Description",
   "main": "index.js",
   "scripts": {
-    "start" :"npm start"
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -17,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/katelynndonahue/book-finder/issues"
   },
-  "homepage": "https://github.com/katelynndonahue/book-finder#readme"
+  "homepage": "https://github.com/katelynndonahue/book-finder#readme",
+  "dependencies": {
+    "concurrently": "^7.0.0"
+  }
 }
